--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Literata:opsz,wght@7..72,300&family=Nothing+You+Could+Do&display=swap"
         rel="stylesheet">
@@ -200,7 +200,7 @@
 
                     <div>
                         <h3 class="font-logo large-text-title">
-                            Languages 640510091
+                            Languages
                         </h3>
                         <div>
                             <div class="py-1 font-title large-text-con">Thai (Native)</div>
