--- a/project.html
+++ b/project.html
@@ -1,42 +1,221 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./CSS/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Literata:opsz,wght@7..72,300&family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="keywords" content="UX/UI resume Krittiya Sereekittikul">
+  <meta name="description" content="This is my UX/UI Resume. My name is Krittiya Sereekittikul. I am interested in the UX/UI position. click to visit if you're interested in my resume.">
+  <title>Krittiya's resume</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Literata:opsz,wght@7..72,300&family=Nothing+You+Could+Do&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;1,200;1,400&display=swap"
+    rel="stylesheet">
 </head>
-  <body class="bg-ap">
-    <nav class="navbar opacity-50 navbar-expand-lg bg-body-tertiary navbar bg-warning-subtle border-bottom border-body" data-bs-theme="dark"">
-        <div class="container-fluid">
-          <a class="font-logo navbar-brand" href="index.html">KRITTIYA S.</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse navbar-list" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link font-logo large-text-bar" aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link font-logo large-text-bar" href="about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active font-logo large-text-bar" href="project.html">Project</a>
-              </li>
-            </ul>
-          </div>
+
+<body>
+  <nav
+    class="navbar opacity-50 navbar-expand-lg bg-body-tertiary navbar bg-warning-subtle border-bottom border-body fixed-top"
+    data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="font-logo navbar-brand" href="index.html">KRITTIYA S.</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse navbar-list" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link font-logo large-text-bar" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  font-logo large-text-bar" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active font-logo large-text-bar" href="project.html">Project</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+
+<br>
+
+
+
+  <div class="title-a">
+    <br>
+    <br>
+    <br>
+    <h3 class="large-text-a font-logo">Krittiya Sereekittikul's</h3>
+    <h4 class="large-text-a font-logo">UX/UI Project</h4>
+  </div>
+
+  <div class="container pb-5">
+
+    <div id="carouselExampleDark" class="carousel carousel-dark slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="5" aria-label="Slide 6"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="6" aria-label="Slide 7"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="7" aria-label="Slide 8"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img src="images/register.png" class="object-fit-contain rounded w-100" alt="..."
+            width="400" height="600">
         </div>
-      </nav>
-      
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="images/sign in.png" class="object-fit-contain rounded w-100" alt="..." width="400" height="600">
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="images/sign up.png" class="object-fit-contain rounded w-100" alt="..." width="400" height="600">
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="images/personal Information _ Setting.png" class="object-fit-contain rounded w-100" alt="..."
+            width="400" height="600">
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="images/menu.png" class="object-fit-contain rounded w-100" alt="..." width="400" height="600">
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="images/route.png" class="object-fit-contain rounded w-100" alt="..." width="400" height="600">
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="images/route (2).png" class="object-fit-contain rounded w-100" alt="..." width="400" height="600">
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="images/route (3).png" class="object-fit-contain rounded w-100" alt="..." width="400" height="600">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+
+
+  <div class="title-a py-5 ">
+    <br>
+    <br>
+    <br>
+    <h3 class="large-text-a font-logo">Krittiya Sereekittikul's</h3>
+    <h4 class="large-text-a font-logo">Photoshop Project</h4>
 
 
 
 
-    
+    <div class="d-flex justify-content-center pt-5">
+      <div class="column">
+        <img src="images/trash.jpg" class="object-fit-contain object-fit-l-contain" style="width:100%; " onclick="openModal();currentSlide(1)"
+          class="hover-shadow cursor">
+      </div>
+      <div class="column">
+        <img src="images/fruit2.jpg" class="object-fit-contain object-fit-l-contain" style="width:100%; height:70%" onclick="openModal();currentSlide(2)"
+          class="hover-shadow cursor">
+      </div>
+      <div class="column">
+        <img src="images/magazine.jpg" class="object-fit-contain" style="width:100%; height:80%" onclick="openModal();currentSlide(3)"
+          class="hover-shadow cursor">
+      </div>
+    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </body>
+    <div id="myModal" class="modal">
+      <span class="close cursor" onclick="closeModal()">&times;</span>
+      <div class="modal-content">
+
+        <div class="mySlides bg-black pb-5">
+          <img src="images/trash.jpg" class="object-fit-contain object-fit-l-contain w-100" style="width:100%; height:100vh">
+        </div>
+
+        <div class="mySlides bg-black pb-5">
+          <img src="images/fruit2.jpg" class="object-fit-contain object-fit-l-contain w-100" style="width:100%; height:100vh">
+        </div>
+
+        <div class="mySlides bg-black pb-5">
+          <img src="images/magazine.jpg" class="object-fit-contain object-fit-l-contain w-100" style="width:100%; height:100vh">
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+  <footer class="footer-p opacity-50">
+    <div class="font-logo">Krittiya s.</div>
+    <div class="poppins-font pt-4">Arts Silpakorn University</div>
+    <div class="pt-3">
+      <a href="index.html" class="a-link text-white poppins-font px-3">Home</a>
+      <a href="about.html" class="a-link text-white poppins-font px-3 border-start border-end">About</a>
+      <a href="project.html" class="a-link text-white poppins-font px-3">Project</a>
+    </div>
+
+    <div class="pt-5 poppins-font text-footer">Copyright © 2023 Krittiya s.. All rights reserved.</div>
+  </footer>
+
+
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script>
+    function openModal() {
+      document.getElementById("myModal").style.display = "block";
+    }
+
+    function closeModal() {
+      document.getElementById("myModal").style.display = "none";
+    }
+
+    var slideIndex = 1;
+    showSlides(slideIndex);
+
+    function plusSlides(n) {
+      showSlides(slideIndex += n);
+    }
+
+    function currentSlide(n) {
+      showSlides(slideIndex = n);
+    }
+
+    function showSlides(n) {
+      var i;
+      var slides = document.getElementsByClassName("mySlides");
+      var dots = document.getElementsByClassName("demo");
+      var captionText = document.getElementById("caption");
+      if (n > slides.length) { slideIndex = 1 }
+      if (n < 1) { slideIndex = slides.length }
+      for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";
+      }
+      for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+      }
+      slides[slideIndex - 1].style.display = "block";
+      dots[slideIndex - 1].className += " active";
+      captionText.innerHTML = dots[slideIndex - 1].alt;
+    }
+  </script>
+</body>
+
 </html>
