--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <meta name="keywords" content="UX/UI resume Krittiya Sereekittikul">
+    <meta name="description"
+        content="This is my UX/UI Resume. My name is Krittiya Sereekittikul. I am interested in the UX/UI position. click to visit if you're interested in my resume.">
+    <title>Krittiya's UX/UI resume</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -14,7 +16,7 @@
         rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <linkhref="https://fonts.googleapis.com/css2?family=Hind+Siliguri&family=Literata:opsz,wght@7..72,300&display=swap"
+    <linkhref="https: //fonts.googleapis.com/css2?family=Hind+Siliguri&family=Literata:opsz,wght@7..72,300&display=swap"
         rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,69 +32,62 @@
         <!-- aos -->
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="background-image-all">
         <nav class="navbar opacity-50 navbar-expand-lg bg-body-tertiary navbar bg-warning-subtle border-bottom border-body"
             data-bs-theme="dark">
             <div class="container-fluid ">
                 <a class="font-logo navbar-brand" href="index.html">KRITTIYA S.</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                        <div class="collapse navbar-collapse navbar-list" id="navbarNav">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link active font-logo large-text-bar" aria-current="page" href="index.html">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link font-logo large-text-bar" href="about.html">About</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link font-logo large-text-bar" href="project.html">Project</a>
-                                </li>
-                            </ul>
-                        </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse navbar-list" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active font-logo large-text-bar" aria-current="page"
+                                href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link font-logo large-text-bar" href="about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link font-logo large-text-bar" href="project.html">Project</a>
+                        </li>
+                    </ul>
+                </div>
 
-               
+
             </div>
         </nav>
 
         <div class="container text-center">
             <div class="row row-cols-1 g-2 g-lg-3">
-                <div class=" d-flex justify-content-center align-items-center vh-100">
-                    <div data-aos="fade-up" data-aos-duration="3000">
-                        <h1 class="font-logo fs-lg-1 large-text text-wrap text-white"><strong>KRITTIYA
-                                SEREEKITTIKUL</strong></h1>
-                        <h1 class="font-logo fs-lg-1 large-text text-wrap text-white"><strong>UX/UI DESIGNER</strong>
-                        </h1>
+                <div class="col">
+                    <div class="content-hp d-flex justify-content-center align-items-center vh-100">
+                        <div data-aos="fade-up" data-aos-duration="3000">
+                            <h1 class="font-logo fs-lg-1 large-text text-wrap text-white"><strong>KRITTIYA
+                                    SEREEKITTIKUL</strong></h1>
+                            <h1 class="font-logo fs-lg-1 large-text text-wrap text-white"><strong>UX/UI DESIGNER</strong>
+                            </h1>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <footer class="footer-p">   
+            <div class="font-logo">Krittiya s.</div>
+            <div class="poppins-font pt-4">Arts Silpakorn University</div>
+            <div class="pt-3">
+              <a href="index.html" class="a-link text-white poppins-font px-3">Home</a>
+              <a href="about.html" class="a-link text-white poppins-font px-3 border-start border-end">About</a>
+              <a href="project.html" class="a-link text-white poppins-font px-3">Project</a>
+            </div>
+        
+            <div class="pt-5 poppins-font text-footer">Copyright © 2023 Krittiya s.. All rights reserved.</div>
+        </footer>
 
     </div>
 
